--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,8 +1,11 @@
+.Dictionary input {
+  opacity: 0.7;
+}
+
 .Dictionary section {
-  background: white;
+  background: rgb(248, 246, 246);
   padding: 10px;
   border-radius: 16px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7);
   margin: 20px 0;
 }
 
