--- a/src/Phonetics.css
+++ b/src/Phonetics.css
@@ -3,7 +3,7 @@
 }
 
 .Phonetics a {
-  font-size: 17px;
+  font-size: 16px;
   border: 1px solid #ddd;
   text-decoration: none;
   padding: 7px 14px;
@@ -15,4 +15,9 @@
 .Phonetics a:hover {
   background: rgb(9, 9, 250);
   color: white;
+}
+
+.Phonetics .text {
+  opacity: 0.7;
+  font-weight: bold;
 }
