--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,26 @@
   display: block;
   margin: 0 auto;
   max-width: 600px;
+  color: #55330c;
+  font-family: monospace;
 }
 
 .App-logo {
-  max-width: 100px;
-  margin-left: 80px;
+  max-width: 130px;
+  margin-left: 50px;
 }
 
 .Lexicon {
   color: pink;
   font-family: fantasy;
+  font-size: 60px;
   margin-left: -60px;
   margin-top: 25px;
+}
+
+footer {
+  font-size: 13px;
+  margin-bottom: 10px;
+  margin-top: -4px;
+  margin-left: 30px;
 }
