--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,15 +1,22 @@
-.Dictionary input {
-  opacity: 0.7;
-}
-
 .Dictionary section {
-  background: rgb(248, 246, 246);
+  background: #ffc0cb;
   padding: 10px;
   border-radius: 16px;
   margin: 20px 0;
 }
 
 .Dictionary input {
-  width: 100%;
-  border-radius: 10px;
+  width: 80%;
+  border-radius: 9px;
+  background: #ffecef;
+  color: #55330c;
+}
+
+.Dictionary button {
+  background: #ffecef;
+  color: #55330c;
+  font-weight: bold;
+  width: 15%;
+  border-radius: 9px;
+  margin-left: 15px;
 }
